    useage, greater emphasis on explicitness
    - the "primary_key" attribute of Table and other selectables becomes
    a setlike ColumnCollection object; is no longer ordered or numerically
    indexed.  a comparison clause between two pks that are derived from the 
    same underlying tables (i.e. such as two Alias objects) can be generated 
    via table1.primary_key==table2.primary_key
    - append_item() methods removed from Table and Column; preferably
    construct Table/Column/related objects inline, but if needed use 
    append_column(), append_foreign_key(), append_constraint(), etc.
    - table.create() no longer returns the Table object, instead has no
    return value.  the usual case is that tables are created via metadata,
    which is preferable since it will handle table dependencies.
    - added UniqueConstraint (goes at Table level), CheckConstraint
    (goes at Table or Column level).
    - index=False/unique=True on Column now creates a UniqueConstraint,
    index=True/unique=False creates a plain Index, 
    index=True/unique=True on Column creates a unique Index.  'index'
    and 'unique' keyword arguments to column are now boolean only; for
    explcit names and groupings of indexes or unique constraints, use the
    UniqueConstraint/Index constructs explicitly.
    - added autoincrement=True to Column; will disable schema generation
    of SERIAL/AUTO_INCREMENT/identity seq for postgres/mysql/mssql if
    explicitly set to False
    - TypeEngine objects now have methods to deal with copying and comparing
    values of their specific type.  Currently used by the ORM, see below.
    - fixed condition that occurred during reflection when a primary key
    column was explciitly overridden, where the PrimaryKeyConstraint would
    get both the reflected and the programmatic column doubled up
    - the "foreign_key" attribute on Column and ColumnElement in general
    is deprecated, in favor of the "foreign_keys" list/set-based attribute,